added NavigationComponent, added HomeComponent, updated unit test dependencies

--- a/src/app/components/crimson-title/crimson-title.component.css
+++ b/src/app/components/crimson-title/crimson-title.component.css
@@ -1,7 +1,7 @@
 span.title-text-crimson {
-  text-color: red;
+  color: red;
 }
 
 span.title-text-imagination {
-  text-color: black;
+  color: black;
 }
